# macroquad-study

./: Cargo.toml  index.html
public/: index.html  macroquad-study.wasm
scripts/: serve.sh
src/: main.rs
